--- a/public/graph/graph.html
+++ b/public/graph/graph.html
@@ -25,10 +25,10 @@
                 <a href="../../index.html">Algorithm Visualizer</a>
             </box>
             <box class="element">
-                <a href="https://github.com/ISHAAN1091" target=_blank>
-                    <i class="fab fa-github-square"></i>Ishaan Kamra</a>
-                <a href="https://github.com/bhatoyajatin123" target=_blank>
-                    <i class="fab fa-github-square"></i>Jatin Bhatoya</a>
+                <a href="https://github.com/adityabhardwaj16" target=_blank>
+                    <i class="fab fa-github-square"></i>Aditya Bhardwaj</a>
+                <a href="https://github.com/shivamgoel08" target=_blank>
+                    <i class="fab fa-github-square"></i>Shivam Goel</a>
             </box>
         </div>
     </div>
