--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <box class="element">
                 <a href="https://github.com/adityabhardwaj16" target=_blank>
                     <i class="fab fa-github-square"></i>Aditya Bhardwaj</a>
-                <a href="https://github.com/bhatoyajatin123" target=_blank>
-                    <i class="fab fa-github-square"></i>Jatin Bhatoya</a>
+                <a href="https://github.com/shivamgoel08" target=_blank>
+                    <i class="fab fa-github-square"></i>Shivam Goel</a>
             </box>
         </div>
     </div>
